deprecated/auth/manifest/auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: lidaning/auth
        imagePullPolicy: Always
        ports:
        - containerPort: 4090
